--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -10,7 +10,7 @@
 
 - name: Spotify Repo
   apt_repository:
-    repo: deb deb http://repository.spotify.com stable non-free
+    repo: deb http://repository.spotify.com stable non-free
     state: present
 
 - name: Update everything
