--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -103,6 +103,12 @@
     enabled: yes
     state: started
 
+- name: netfilter-persistant
+  systemd:
+    name: netfilter-persistent
+    enabled: yes
+    state: started
+
 - name: cups
   systemd:
     name: cups
