--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -140,5 +140,6 @@
   cron:
     name: ansible
     minute: 0
+    user: root
     cron_file: ansible-update
     job: /usr/bin/ansible-pull -U https://github.com/akinnane/playbooks.git -i localhost,
