--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -21,7 +21,7 @@
   apt_repository:
     repo: deb [arch=amd64] https://dl.google.com/linux/chrome/deb/ stable main
 
-- Name: Update everything
+- name: Update everything
   apt:
     upgrade: dist
     update_cache: yes
