--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,12 +5,19 @@ phases:
   install:
     commands:
       - pip install ansible
+      - wget https://releases.hashicorp.com/packer/1.3.1/packer_1.3.1_linux_amd64.zip
+      - unzip packer_1.3.1_linux_amd64.zip
 
-  build:
+  pre_build:
     commands:
       - ansible-playbook --syntax-check ak.yml
       - ansible-playbook --syntax-check localhost.yml
       - aws cloudformation validate-template --template-body file://cf.yml
+
+  build:
+    commands:
+      - ./packer validate packer.json
+
 
 artifacts:
   files:
