--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -1,12 +1,7 @@
-- name: Spotify apt key1
+- name: Spotify apt key
   apt_key:
     keyserver: keyserver.ubuntu.com
-    id: 0DF731E45CE24F27EEEB1450EFDC8610341D9410
-
-- name: Spotify apt key2
-  apt_key:
-    keyserver: keyserver.ubuntu.com
-    id: 931FF8E79F0876134EDDBDCCA87FF9DF48BF1C90
+    id: BBEBDCB318AD50EC6865090613B00F1FD2C19886
 
 - name: Spotify Repo
   apt_repository:
