--- a/roles/general/tasks/main.yml
+++ b/roles/general/tasks/main.yml
@@ -97,6 +97,14 @@
     - dconf-db
     - netfilter-persistent
 
+- name: Update GDM CSS
+  file:
+    path: /etc/alternatives/gdm3.css
+    src: /etc/gdm3/gdm3.css
+    owner: root
+    group: root
+    state: link
+
 - name: Add user
   user:
     name: a
