--- a/cf.yaml
+++ b/cf.yaml
@@ -42,8 +42,8 @@ Resources:
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -x
-          apt-get -y install python-setuptools
-          easy_install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
+          apt-get -y install python-pip
+          pip install https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz
           echo "TEST ME"
           /usr/local/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource AutoScalingGroup --region ${AWS::Region}
 
