--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
 
   build:
     commands:
-      - ./packer validate packer.json
+      - ./packer build packer.json
 
 artifacts:
   files:
