--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
   install:
     commands:
       - pip install ansible
-      - wget https://releases.hashicorp.com/packer/1.2.5/packer_1.2.5_linux_amd64.zip
+      - wget -q https://releases.hashicorp.com/packer/1.2.5/packer_1.2.5_linux_amd64.zip
       - unzip packer_1.2.5_linux_amd64.zip
 
   pre_build:
