--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
 
   post_build:
     commands:
-      - echo ./add_ami_to_template_parameters.py
+      - ./add_ami_to_template_parameters.py
 
 artifacts:
   files:
