file permissions dont survivve zipping, run directly with python

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,7 +21,7 @@ phases:
 
   post_build:
     commands:
-      - ./add_ami_to_template_parameters.py
+      - python add_ami_to_template_parameters.py
 
 artifacts:
   files:
